It DOES NOT substitute the  CVS log-message one should put at every
committal in the CVS repository !

     ----------------------------------------------------------
     * Reverse chronological order (last date on top), please *
     ----------------------------------------------------------

History file for visualization/modeling
---------------------------------------

11th August 2014  John Allison  (modeling-V10-00-07)
- Corrected date. modeling-V10-00-06 should be August.

9th July 2014  John Allison  (modeling-V10-00-06)
- G4AxesModel: Added a parameter for text size.  (Default 10 pixels.)
- G4TrajectoryDrawerUtils.cc and G4TouchableDumpScene.cc:
  o Fixed small memory leak.  (AttValues must be deleted by the user
    after use.)

19th May 2014  John Allison  (modeling-V10-00-05)
- Introduced G4TouchableDumpScene.
- Introduced G4PseudoScene.  The following now inherit it:
  o G4PhysicalVolumeSearchScene
  o G4BoundingSphereScene
  o G4TouchableDumpScene
- G4PhysicalVolumeModel
  o Allow instantiation of an empty model via the default constructor so
    that it can be used, for example, to get the G4AttDefs.  If it
    proves to be a problem we might have to disallow it again, but it is
    unlikley to be used except by visualisation experts.  See, for example,
    /vis/list, where it is used simply to get a list of G4AttDefs
  o Introduced Abort - all further geometry traversal is stopped.  (This
    is useful in G4TouchableDumpScene - once the required touchable is found
    there is no need to continue.)
  o Tidied.

6th March 2014  John Allison  (modeling-V10-00-04)
- G4PhysicalVolumeModel.cc:
  o More careful protection of zero pointers in constructor.

26th January 2014  John Allison  (modeling-V10-00-02)
- GNUmakefile: Added dependency on run category.
- G4PhysicalVolumeModel:
  o Augmented constructor to set sensible values of some data members,
    namely fpCurrentPV, fpCurrentLV, fpCurrentMaterial and